--- a/index.html
+++ b/index.html
@@ -28,12 +28,29 @@
 <section class="hero">
   <h1 data-key="welcome"></h1>
 </section>
+<section>
+  <h2>Online Services</h2>
 
+  <div class="cards">
+    <div class="card service-card">
+      <h3>🙏 Special Darshan</h3>
+      <p>Book special darshan and temple services.</p>
+    </div>
+
+    <div class="card service-card">
+      <h3>💰 E-Hundi</h3>
+      <p>Offer your contribution digitally.</p>
+    </div>
+
+    <div class
+
+  
 <section>
   <h2 data-key="about_title"></h2>
   <p data-key="about_short"></p>
 </section>
 
+  
 <footer>
   <p data-key="footer_name"></p>
   <p><a href="https://www.devalthirumalapurdevasthanam.com">www.devalthirumalapurdevasthanam.com</a></p>
