--- a/index.html
+++ b/index.html
@@ -42,12 +42,25 @@
       <p>Offer your contribution digitally.</p>
     </div>
 
-    <div class
-
-  
+    <div class>
 <section>
   <h2 data-key="about_title"></h2>
   <p data-key="about_short"></p>
+</section>
+<section>
+  <h2>Divine Gallery</h2>
+
+  <div class="gallery-grid">
+    <img src="assets/images/gallery/img1.jpeg" alt="Temple Image">
+    <img src="assets/images/gallery/img2.jpeg" alt="Temple Image">
+    <img src="assets/images/gallery/img3.jpeg" alt="Temple Image">
+    <img src="assets/images/gallery/img4.jpeg" alt="Temple Image">
+    <img src="assets/images/gallery/img5.jpeg" alt="Temple Image">
+  </div>
+
+  <p style="text-align:center;margin-top:15px;">
+    <a href="gallery.html">View Full Gallery →</a>
+  </p>
 </section>
 
   
