--- a/index.html
+++ b/index.html
@@ -63,6 +63,16 @@
   </p>
 </section>
 
+<section>
+  <h2>Temple Schedule & Info</h2>
+
+  <div class="info-box">
+    <p><strong>Morning:</strong> 6:00 AM – 12:00 PM</p>
+    <p><strong>Evening:</strong> 4:00 PM – 9:00 PM</p>
+    <p><strong>Location:</strong> Devalthirumalpur Village</p>
+  </div>
+</section>
+
   
 <footer>
   <p data-key="footer_name"></p>
