--- a/gallery.html
+++ b/gallery.html
@@ -2,15 +2,30 @@
 <html lang="te">
 <head>
 <meta charset="UTF-8">
-<title>Gallery</title>
+<title>Temple Gallery</title>
 <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
 
-<header><a href="index.html">← Home</a></header>
+<header>
+  <h2>Sri Sri Sri Bhunela Sametha Sri Venkateshwara Swamy Devasthanam</h2>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="sevas.html">Sevas</a>
+    <a href="gallery.html">Gallery</a>
+    <a href="donations.html">Donations</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+</header>
 
-<h1>Gallery</h1>
-<p>Temple festivals, utsavams, and alankarams.</p>
+<section>
+  <h1>Divine Gallery</h1>
+  <p>
+    Sacred moments from festivals, utsavams, alankarams,
+    poojas, and special celebrations of the temple.
+  </p>
 
-</body>
-</html>
+  <div class="gallery-grid">
+    <img src="assets/images/gallery/img1.jpg" alt="Temple Gal
