--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
     <a href="donations.html">Donations</a>
     <a href="contact.html">Contact</a>
   </nav>
-  <div>
-    <button onclick="setLang('te')">తెలుగు</button>
-    <button onclick="setLang('en')">English</button>
-  </div>
+  <div class="lang-switch">
+  <button onclick="setLang('te')" id="btn-te">తెలుగు</button>
+  <button onclick="setLang('en')" id="btn-en">English</button>
+</div>
+
 </header>
 
 <section class="hero">
