--- a/index.html
+++ b/index.html
@@ -9,21 +9,23 @@
 <body>
 
 <header>
-  <h2 data-key="site_title"></h2>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="sevas.html">Sevas</a>
-    <a href="gallery.html">Gallery</a>
-    <a href="goshala.html">Goshala</a>
-    <a href="donations.html">Donations</a>
-    <a href="contact.html">Contact</a>
-  </nav>
-  <div class="lang-switch">
-  <button onclick="setLang('te')" id="btn-te">తెలుగు</button>
-  <button onclick="setLang('en')" id="btn-en">English</button>
-</div>
+  <div>
+    <h2 data-key="site_title"></h2>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="sevas.html">Sevas</a>
+      <a href="gallery.html">Gallery</a>
+      <a href="goshala.html">Goshala</a>
+      <a href="donations.html">Donations</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </div>
 
+  <div class="lang-switch simple">
+    <button onclick="setLang('te')" id="btn-te">తెలుగు</button>
+    <button onclick="setLang('en')" id="btn-en">EN</button>
+  </div>
 </header>
 
 <section class="hero">
