--- a/gallery.html
+++ b/gallery.html
@@ -29,3 +29,5 @@
 
   <div class="gallery-grid">
     <img src="assets/images/gallery/img1.jpg" alt="Temple Gal
+  <section class="gallery-section">
+
