--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div>
     <h2 data-key="site_title"></h2>
     <nav>
-      <a href="index.html">Home</a>
+      <a href="index.html" class="active">Home</a>
       <a href="about.html">About</a>
       <a href="sevas.html">Sevas</a>
       <a href="gallery.html">Gallery</a>
