--- a/gallery.html
+++ b/gallery.html
@@ -14,7 +14,7 @@
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="sevas.html">Sevas</a>
-    <a href="gallery.html">Gallery</a>
+    <a href="gallery.html" class="active">Gallery</a>
     <a href="donations.html">Donations</a>
     <a href="contact.html">Contact</a>
   </nav>
