--- a/gallery.html
+++ b/gallery.html
@@ -7,6 +7,17 @@
 </head>
 
 <body>
+<!-- Background Bhakti Audio -->
+<audio id="bg-audio" loop>
+  <source src="assets/audio/om_namo_venkatesaya.mp3" type="audio/mpeg">
+</audio>
+
+<div class="audio-bar">
+  <span>Namaskaram Pilgrim</span>
+  <strong>Om Namo Venkatesaya</strong>
+  <button id="audio-toggle" title="Mute / Unmute">🔊</button>
+</div>
+
 
 <header>
   <h2>Sri Sri Sri Bhunela Sametha Sri Venkateshwara Swamy Devasthanam</h2>
