--- a/donations.html
+++ b/donations.html
@@ -7,6 +7,17 @@
 <script src="assets/js/lang.js" defer></script>
 </head>
 <body>
+  
+<!-- Background Bhakti Audio -->
+<audio id="bg-audio" loop>
+  <source src="assets/audio/om_namo_venkatesaya.mp3" type="audio/mpeg">
+</audio>
+
+<div class="audio-bar">
+  <span>Namaskaram Pilgrim</span>
+  <strong>Om Namo Venkatesaya</strong>
+  <button id="audio-toggle" title="Mute / Unmute">🔊</button>
+</div>
 
 <header><a href="index.html">← Home</a></header>
 
