--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,18 @@
 
 <body>
 
+<!-- Background Bhakti Audio -->
+<audio id="bg-audio" loop>
+  <source src="assets/audio/om_namo_venkatesaya.mp3" type="audio/mpeg">
+</audio>
+
+<div class="audio-bar">
+  <span>Namaskaram Pilgrim</span>
+  <strong>Om Namo Venkatesaya</strong>
+  <button id="audio-toggle" title="Mute / Unmute">🔊</button>
+</div>
+
+
 <header>
   <h2 data-key="site_title"></h2>
   <nav>
