--- a/index.html
+++ b/index.html
@@ -45,11 +45,25 @@
 <section>
   <h2>Online Services</h2>
 
-  <div class="cards">
-    <div class="card service-card">
-      <h3>🙏 Special Darshan</h3>
-      <p>Book special darshan and temple services.</p>
-    </div>
+ <div class="card service-card">
+  <h3>🙏 Special Darshan</h3>
+  <p>Request special darshan at the temple.</p>
+
+  <!-- Google Form Button -->
+  <a href="https://docs.google.com/forms/d/e/1FAIpQLSc3OvRV7Mga_RDBcSePoWxTkUuFy9AcbdCTYHTO965BB0wGDw/viewform"
+     target="_blank"
+     class="btn-primary">
+     Request Special Darshan
+  </a>
+
+  <!-- WhatsApp Enquiry (Optional) -->
+  <a href="https://wa.me/919000012345?text=I%20want%20to%20request%20Special%20Darshan"
+     target="_blank"
+     class="btn-secondary">
+     WhatsApp Enquiry
+  </a>
+</div>
+
 
     <div class="card service-card">
       <h3>💰 E-Hundi</h3>
