--- a/contact.html
+++ b/contact.html
@@ -23,15 +23,19 @@
 
 <header>
   <h2 data-key="site_title"></h2>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="sevas.html">Sevas</a>
-    <a href="gallery.html">Gallery</a>
-    <a href="goshala.html">Goshala</a>
-    <a href="donations.html">Donations</a>
-    <a href="contact.html" class="active">Contact</a>
-  </nav>
+  <nav class="ttd-nav">
+  <a href="index.html">Home</a>
+  <a href="about.html">About</a>
+  <a href="sevas.html">Sevas</a>
+  <a href="donations.html">Donations</a>
+  <a href="places.html">Available Places</a>
+  <a href="notifications.html">News & Events</a>
+  <a href="gallery.html">Gallery</a>
+  <a href="media.html">Media Room</a>
+  <a href="library.html">Library</a>
+  <a href="contact.html">Contact</a>
+</nav>
+
 
   <div class="lang-switch simple">
     <button onclick="setLang('te')" id="btn-te">తెలుగు</button>
