--- a/about.html
+++ b/about.html
@@ -19,7 +19,27 @@
 </div>
 
   
-<header><a href="index.html">← Home</a></header>
+<header>
+   <h2 data-key="site_title"></h2>
+  <nav class="ttd-nav">
+  <a href="index.html">Home</a>
+  <a href="about.html">About</a>
+  <a href="sevas.html">Sevas</a>
+  <a href="donations.html">Donations</a>
+  <a href="places.html">Available Places</a>
+  <a href="notifications.html">News & Events</a>
+  <a href="gallery.html">Gallery</a>
+  <a href="media.html">Media Room</a>
+  <a href="library.html">Library</a>
+  <a href="contact.html">Contact</a>
+</nav>
+
+
+  <div class="lang-switch simple">
+    <button onclick="setLang('te')" id="btn-te">తెలుగు</button>
+    <button onclick="setLang('en')" id="btn-en">EN</button>
+  </div>
+</header>
 
 <h1 data-key="about_title"></h1>
 <p data-key="about_full"></p>
