--- a/gallery.html
+++ b/gallery.html
@@ -21,14 +21,19 @@
 
 <header>
   <h2>Sri Sri Sri Bhunela Sametha Sri Venkateshwara Swamy Devasthanam</h2>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="sevas.html">Sevas</a>
-    <a href="gallery.html" class="active">Gallery</a>
-    <a href="donations.html">Donations</a>
-    <a href="contact.html">Contact</a>
-  </nav>
+  <nav class="ttd-nav">
+  <a href="index.html">Home</a>
+  <a href="about.html">About</a>
+  <a href="sevas.html">Sevas</a>
+  <a href="donations.html">Donations</a>
+  <a href="places.html">Available Places</a>
+  <a href="notifications.html">News & Events</a>
+  <a href="gallery.html">Gallery</a>
+  <a href="media.html">Media Room</a>
+  <a href="library.html">Library</a>
+  <a href="contact.html">Contact</a>
+</nav>
+
 </header>
 
 <section>
