--- a/index.html
+++ b/index.html
@@ -22,15 +22,19 @@
 <header>
   <div>
     <h2 data-key="site_title"></h2>
-    <nav>
-      <a href="index.html" class="active">Home</a>
-      <a href="about.html">About</a>
-      <a href="sevas.html">Sevas</a>
-      <a href="gallery.html">Gallery</a>
-      <a href="goshala.html">Goshala</a>
-      <a href="donations.html">Donations</a>
-      <a href="contact.html">Contact</a>
-    </nav>
+    <nav class="ttd-nav">
+  <a href="index.html">Home</a>
+  <a href="about.html">About</a>
+  <a href="sevas.html">Sevas</a>
+  <a href="donations.html">Donations</a>
+  <a href="places.html">Available Places</a>
+  <a href="notifications.html">News & Events</a>
+  <a href="gallery.html">Gallery</a>
+  <a href="media.html">Media Room</a>
+  <a href="library.html">Library</a>
+  <a href="contact.html">Contact</a>
+</nav>
+
   </div>
 
   <div class="lang-switch simple">
