--- a/library.html
+++ b/library.html
@@ -20,7 +20,21 @@
 </div>
 
 
-<header><a href="index.html">← Home</a></header>
+<header>
+  <nav class="ttd-nav">
+  <a href="index.html">Home</a>
+  <a href="about.html">About</a>
+  <a href="sevas.html">Sevas</a>
+  <a href="donations.html">Donations</a>
+  <a href="places.html">Available Places</a>
+  <a href="notifications.html">News & Events</a>
+  <a href="gallery.html">Gallery</a>
+  <a href="media.html">Media Room</a>
+  <a href="library.html">Library</a>
+  <a href="contact.html">Contact</a>
+</nav>
+
+</header>
 
 <h1 data-key="library_title"></h1>
 <p data-key="library_desc"></p>
