--- a/media.html
+++ b/media.html
@@ -10,5 +10,41 @@
 <h2>మీడియా రూమ్</h2>
 <p>లైవ్ దర్శనం, వీడియోలు మరియు సోషల్ మీడియా అప్‌డేట్స్.</p>
 
+<section class="media-section">
+
+  <h2>📿 ప్రతి రోజు లైవ్ ప్రత్యక్ష ప్రసారం</h2>
+  <p class="subtitle">
+    శ్రీ శ్రీ శ్రీ భూనేల సమేత శ్రీ వెంకటేశ్వర స్వామి దేవస్థానం
+  </p>
+
+  <div class="media-links">
+
+    <a href="https://www.youtube.com/@svbcdtd1664" target="_blank" class="media-card yt">
+      ▶️ YouTube Live Darshan
+    </a>
+
+    <a href="https://www.facebook.com/share/14S8TD2S9eq/?mibextid=wwXIfr" target="_blank" class="media-card fb">
+      📘 Facebook Live
+    </a>
+
+    <a href="https://www.instagram.com/svbcdtd1664" target="_blank" class="media-card ig">
+      📸 Instagram Updates
+    </a>
+
+    <a href="mailto:devalthirumalapurdevasthanam@gmail.com" class="media-card mail">
+      📧 Gmail Contact
+      <small>devalthirumalapurdevasthanam@gmail.com</small>
+    </a>
+
+    <a href="https://chat.whatsapp.com/JWXN6EINiWN2Ab6FC6DZ0E" target="_blank" class="media-card wa">
+      💬 WhatsApp Group
+    </a>
+
+  </div>
+
+</section>
+
+
+  
 </body>
 </html>
