--- a/places.html
+++ b/places.html
@@ -9,149 +9,140 @@
 
 <body>
 
-<!-- ===== HEADER / NAVIGATION ===== -->
-<header class="ttd-header">
-  <nav class="ttd-nav">
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="donations.html">Donations</a>
-    <a href="places.html" class="active">Available Places</a>
-    <a href="notifications.html">News & Events</a>
-    <a href="gallery.html">Gallery</a>
-    <a href="media.html">Media Room</a>
-    <a href="library.html">Library</a>
-    <a href="contact.html">Contact</a>
-  </nav>
-</header>
-
-  <!-- ===== PAGE BANNER ===== -->
+<!-- ===== PAGE BANNER ===== -->
 <section class="page-banner">
-
   <div class="lang-te">
     <h1>లభ్యమయ్యే ప్రదేశాలు</h1>
-    <p>
-      దేవస్థానానికి సంబంధించి దర్శనీయమైన ముఖ్యమైన ప్రదేశాలు క్రింద ఇవ్వబడ్డాయి.
-    </p>
+    <p>దేవస్థానానికి సంబంధించి దర్శనీయమైన ముఖ్యమైన ప్రదేశాలు</p>
   </div>
 
   <div class="lang-en hidden">
     <h1>Available Places</h1>
-    <p>
-      Important pilgrimage and tourist places associated with the Devasthanam.
-    </p>
+    <p>Important pilgrimage and tourist places near the Devasthanam</p>
   </div>
-
 </section>
 
-<!-- ===== PLACES SECTION ===== -->
-<section class="places-section">
-
-  <!-- Tabs -->
-  <div class="places-tabs">
-    <button class="tab active" onclick="showPlace('umamaheshwaram')">Umamaheshwaram</button>
-    <button class="tab" onclick="showPlace('srisailam')">Srisailam</button>
-    <button class="tab" onclick="showPlace('nagarjuna')">Nagarjuna Sagar</button>
-    <button class="tab" onclick="showPlace('somasila')">Somasila</button>
-    <button class="tab" onclick="showPlace('dindi')">Dindi Reservoir</button>
-  </div>
+<!-- ===== PLACES GRID ===== -->
+<section class="places-grid">
 
   <!-- Umamaheshwaram -->
-  <div class="place-content active" id="umamaheshwaram">
+  <div class="place-card">
+    <img src="assets/images/places/umamaheshwaram.jpg" alt="Umamaheshwaram">
+
     <div class="lang-te">
       <h2>🛕 ఉమామహేశ్వరం</h2>
-      <p>
-        ఉమామహేశ్వర ఆలయం ఒక ప్రముఖ శైవ పుణ్యక్షేత్రం.
-        ప్రశాంతమైన ప్రకృతి మధ్యలో ఉన్న ఈ ఆలయం భక్తులకు ఆధ్యాత్మిక శాంతిని అందిస్తుంది.
-      </p>
+      <p>ప్రముఖ శైవ పుణ్యక్షేత్రం. ప్రకృతి మధ్యలో ప్రశాంతతను అందిస్తుంది.</p>
+      <p><strong>దూరం:</strong> సుమారు 75 కి.మీ</p>
+      <p><strong>ప్రయాణ సమయం:</strong> 2 గంటలు</p>
     </div>
 
     <div class="lang-en hidden">
       <h2>🛕 Umamaheshwaram</h2>
-      <p>
-        Umamaheshwaram is an important Shaivite pilgrimage center.
-        Located amidst serene nature, it offers spiritual peace to devotees.
-      </p>
+      <p>Important Shaivite pilgrimage surrounded by natural beauty.</p>
+      <p><strong>Distance:</strong> ~75 km</p>
+      <p><strong>Travel Time:</strong> ~2 hours</p>
     </div>
+
+    <a href="https://maps.google.com/?q=Umamaheshwaram+Temple" target="_blank" class="map-btn">📍 View on Map</a>
   </div>
 
   <!-- Srisailam -->
-  <div class="place-content" id="srisailam">
+  <div class="place-card">
+    <img src="assets/images/places/srisailam.jpg" alt="Srisailam">
+
     <div class="lang-te">
       <h2>🛕 శ్రీశైలం</h2>
-      <p>
-        శ్రీశైలం ద్వాదశ జ్యోతిర్లింగాలలో ఒకటి.
-        మల్లికార్జున స్వామి మరియు భ్రమరాంబ దేవి ఆలయాలతో ప్రసిద్ధి చెందింది.
-      </p>
+      <p>ద్వాదశ జ్యోతిర్లింగాలలో ఒకటి – మల్లికార్జున స్వామి ఆలయం.</p>
+      <p><strong>దూరం:</strong> సుమారు 120 కి.మీ</p>
+      <p><strong>ప్రయాణ సమయం:</strong> 3–4 గంటలు</p>
     </div>
 
     <div class="lang-en hidden">
       <h2>🛕 Srisailam</h2>
-      <p>
-        Srisailam is one of the twelve Jyotirlingas of Lord Shiva.
-        Famous for Mallikarjuna Swamy and Goddess Bhramaramba.
-      </p>
+      <p>One of the twelve Jyotirlingas of Lord Shiva.</p>
+      <p><strong>Distance:</strong> ~120 km</p>
+      <p><strong>Travel Time:</strong> ~3–4 hours</p>
     </div>
+
+    <a href="https://maps.google.com/?q=Srisailam+Temple" target="_blank" class="map-btn">📍 View on Map</a>
   </div>
 
   <!-- Nagarjuna Sagar -->
-  <div class="place-content" id="nagarjuna">
+  <div class="place-card">
+    <img src="assets/images/places/nagarjuna_sagar.jpg" alt="Nagarjuna Sagar">
+
     <div class="lang-te">
       <h2>🌊 నాగార్జున సాగర్</h2>
-      <p>
-        నాగార్జున సాగర్ భారతదేశంలోని ప్రముఖ జలాశయాలలో ఒకటి.
-        పర్యాటకులకు ప్రసిద్ధి చెందిన ప్రాంతం.
-      </p>
+      <p>భారతదేశంలోని ప్రముఖ జలాశయాలలో ఒకటి.</p>
+      <p><strong>దూరం:</strong> సుమారు 90 కి.మీ</p>
+      <p><strong>ప్రయాణ సమయం:</strong> 2.5 గంటలు</p>
     </div>
 
     <div class="lang-en hidden">
       <h2>🌊 Nagarjuna Sagar</h2>
-      <p>
-        Nagarjuna Sagar is one of the largest reservoirs in India,
-        well known for tourism and scenic beauty.
-      </p>
+      <p>One of the largest reservoirs in India.</p>
+      <p><strong>Distance:</strong> ~90 km</p>
+      <p><strong>Travel Time:</strong> ~2.5 hours</p>
     </div>
+
+    <a href="https://maps.google.com/?q=Nagarjuna+Sagar+Dam" target="_blank" class="map-btn">📍 View on Map</a>
   </div>
 
   <!-- Somasila -->
-  <div class="place-content" id="somasila">
+  <div class="place-card">
+    <img src="assets/images/places/somasila.jpg" alt="Somasila">
+
     <div class="lang-te">
       <h2>🌊 సోమశిల</h2>
-      <p>
-        సోమశిల జలాశయం ప్రశాంతమైన వాతావరణంతో
-        కుటుంబ పర్యటనలకు అనువైన ప్రదేశం.
-      </p>
+      <p>ప్రశాంత వాతావరణంతో ప్రసిద్ధి చెందిన జలాశయం.</p>
+      <p><strong>దూరం:</strong> సుమారు 65 కి.మీ</p>
+      <p><strong>ప్రయాణ సమయం:</strong> 2 గంటలు</p>
     </div>
 
     <div class="lang-en hidden">
       <h2>🌊 Somasila</h2>
-      <p>
-        Somasila reservoir is a calm and peaceful destination,
-        suitable for family visits and nature lovers.
-      </p>
+      <p>A calm reservoir suitable for family visits.</p>
+      <p><strong>Distance:</strong> ~65 km</p>
+      <p><strong>Travel Time:</strong> ~2 hours</p>
     </div>
+
+    <a href="https://maps.google.com/?q=Somasila+Dam" target="_blank" class="map-btn">📍 View on Map</a>
   </div>
 
   <!-- Dindi -->
-  <div class="place-content" id="dindi">
+  <div class="place-card">
+    <img src="assets/images/places/dindi.jpg" alt="Dindi Reservoir">
+
     <div class="lang-te">
       <h2>🌿 దిండి రిజర్వాయర్</h2>
-      <p>
-        దిండి రిజర్వాయర్ పచ్చని పరిసరాలతో
-        ప్రకృతి ప్రేమికులకు అనువైన ప్రదేశం.
-      </p>
+      <p>పచ్చని పరిసరాలతో ప్రకృతి ప్రేమికులకు అనుకూలం.</p>
+      <p><strong>దూరం:</strong> సుమారు 55 కి.మీ</p>
+      <p><strong>ప్రయాణ సమయం:</strong> 1.5 గంటలు</p>
     </div>
 
     <div class="lang-en hidden">
       <h2>🌿 Dindi Reservoir</h2>
-      <p>
-        Dindi Reservoir is surrounded by greenery
-        and is ideal for nature and eco-tourism lovers.
-      </p>
+      <p>Ideal destination for nature and eco-tourism lovers.</p>
+      <p><strong>Distance:</strong> ~55 km</p>
+      <p><strong>Travel Time:</strong> ~1.5 hours</p>
     </div>
+
+    <a href="https://maps.google.com/?q=Dindi+Reservoir" target="_blank" class="map-btn">📍 View on Map</a>
   </div>
 
 </section>
 
+<!-- ===== LANGUAGE SCRIPT ===== -->
+<script>
+function setLang(lang){
+  document.querySelectorAll('.lang-te').forEach(e =>
+    e.classList.toggle('hidden', lang !== 'te')
+  );
+  document.querySelectorAll('.lang-en').forEach(e =>
+    e.classList.toggle('hidden', lang !== 'en')
+  );
+}
+</script>
 
 </body>
 </html>
