--- a/places.html
+++ b/places.html
@@ -7,6 +7,20 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
+<header>
+  <nav class="ttd-nav">
+  <a href="index.html">Home</a>
+  <a href="about.html">About</a>
+  <a href="donations.html">Donations</a>
+  <a href="places.html">Available Places</a>
+  <a href="notifications.html">News & Events</a>
+  <a href="gallery.html">Gallery</a>
+  <a href="media.html">Media Room</a>
+  <a href="library.html">Library</a>
+  <a href="contact.html">Contact</a>
+</nav>
+
+</header>
 <body>
 
 <!-- ===== PAGE BANNER ===== -->
