--- a/places.html
+++ b/places.html
@@ -57,7 +57,39 @@
     <a class="map-btn" target="_blank" href="https://maps.google.com/?q=Srisailam+Temple">📍 <span data-key="view_map"></span></a>
   </div>
 
-  <!-- repeat same structure for Nagarjuna, Somasila, Dindi -->
+  <!-- Nagarjuna Sagar -->
+<div class="place-content" id="nagarjuna">
+  <h2 data-key="nagarjuna_title"></h2>
+  <p data-key="nagarjuna_desc"></p>
+  <p><strong data-key="distance"></strong>: <span data-key="nagarjuna_distance"></span></p>
+  <p><strong data-key="travel_time"></strong>: <span data-key="nagarjuna_time"></span></p>
+  <a class="map-btn" target="_blank" href="https://maps.google.com/?q=Nagarjuna+Sagar+Dam">
+    📍 <span data-key="view_map"></span>
+  </a>
+</div>
+
+<!-- Somasila -->
+<div class="place-content" id="somasila">
+  <h2 data-key="somasila_title"></h2>
+  <p data-key="somasila_desc"></p>
+  <p><strong data-key="distance"></strong>: <span data-key="somasila_distance"></span></p>
+  <p><strong data-key="travel_time"></strong>: <span data-key="somasila_time"></span></p>
+  <a class="map-btn" target="_blank" href="https://maps.google.com/?q=Somasila+Dam">
+    📍 <span data-key="view_map"></span>
+  </a>
+</div>
+
+<!-- Dindi Reservoir -->
+<div class="place-content" id="dindi">
+  <h2 data-key="dindi_title"></h2>
+  <p data-key="dindi_desc"></p>
+  <p><strong data-key="distance"></strong>: <span data-key="dindi_distance"></span></p>
+  <p><strong data-key="travel_time"></strong>: <span data-key="dindi_time"></span></p>
+  <a class="map-btn" target="_blank" href="https://maps.google.com/?q=Dindi+Reservoir">
+    📍 <span data-key="view_map"></span>
+  </a>
+</div>
+
 
 </section>
 
