--- a/about.html
+++ b/about.html
@@ -4,7 +4,6 @@
 <meta charset="UTF-8">
 <title>About Temple</title>
 <link rel="stylesheet" href="assets/css/style.css">
-<script src="assets/js/lang.js" defer></script>
 </head>
 <body>
 <!-- Background Bhakti Audio -->
@@ -42,6 +41,8 @@
 
 <h1 data-key="about_title"></h1>
 <p data-key="about_full"></p>
+
+<script src="assets/js/lang.js"></script>
 
 </body>
 </html>
