--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Contact Us</title>
   <link rel="stylesheet" href="assets/css/style.css">
-  <script src="assets/js/lang.js" defer></script>
+ 
 </head>
 
 <body>
@@ -103,6 +103,8 @@
     </p>
   </div>
 </footer>
+
+<script src="assets/js/lang.js"></script>
 
 </body>
 </html>
