--- a/donations.html
+++ b/donations.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Donations</title>
 <link rel="stylesheet" href="assets/css/style.css">
-<script src="assets/js/lang.js" defer></script>
+
 </head>
 <body>
   
@@ -47,6 +47,8 @@
   <li data-key="don3"></li>
   <li data-key="don4"></li>
 </ul>
+
+<script src="assets/js/lang.js"></script>
 
 </body>
 </html>
