--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title data-key="site_title"></title>
 <link rel="stylesheet" href="assets/css/style.css">
-<script src="assets/js/lang.js" defer></script>
+
 </head>
 <body>
 <!-- Background Bhakti Audio -->
@@ -148,6 +148,7 @@
   </div>
 </footer>
 
+<script src="assets/js/lang.js"></script>
 
 </body>
 </html>
