--- a/library.html
+++ b/library.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Library</title>
 <link rel="stylesheet" href="assets/css/style.css">
-<script src="assets/js/lang.js" defer></script>
+
 </head>
 <body>
 
@@ -37,6 +37,8 @@
 
 <h1 data-key="library_title"></h1>
 <p data-key="library_desc"></p>
+
+<script src="assets/js/lang.js"></script>
 
 </body>
 </html>
