--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <!-- Left Logo -->
     <div class="banner-logo left">
-      <img src="assets/images/logo-left.jpeg" alt="Temple Logo">
+      <img src="assets/images/logo-left.png" alt="Temple Logo">
     </div>
 
     <!-- Center Title -->
@@ -34,7 +34,7 @@
 
     <!-- Right Logo -->
     <div class="banner-logo right">
-      <img src="assets/images/logo-right.jpeg" alt="Deity Image">
+      <img src="assets/images/logo-right.png" alt="Deity Image">
     </div>
 
   </div>
