--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
   <a href="donations.html">Donations</a>
   <a href="places.html">Available Places</a>
   <a href="notifications.html">News & Events</a>
+  <a href="goshala.html">Goshala</a>
   <a href="gallery.html">Gallery</a>
   <a href="media.html">Media Room</a>
   <a href="library.html">Library</a>
