--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <a href="index.html">Home</a>
   <a href="about.html">About</a>
   <a href="donations.html">Donations</a>
-  <a href="places.html">Available Places</a>
+  <a href="available-temples.html">Available Temples</a>
   <a href="notifications.html">News & Events</a>
   <a href="goshala.html">Goshala</a>
   <a href="gallery.html">Gallery</a>
