--- a/available-temples.html
+++ b/available-temples.html
@@ -15,17 +15,17 @@
     <h2 data-key="site_title"></h2>
 
     <nav class="ttd-nav">
-      <a href="index.html" data-key="nav_home">Home</a>
-      <a href="about.html" data-key="nav_about">About</a>
-      <a href="donations.html" data-key="nav_donations">Donations</a>
-      <a href="places.html" data-key="nav_places">Available Places</a>
-      <a href="available-temples.html" class="active" data-key="nav_temples"></a>
-      <a href="notifications.html" data-key="nav_news">News & Events</a>
-      <a href="gallery.html" data-key="nav_gallery">Gallery</a>
-      <a href="media.html" data-key="nav_media">Media Room</a>
-      <a href="library.html" data-key="nav_library">Library</a>
-      <a href="contact.html" data-key="nav_contact">Contact</a>
-    </nav>
+  <a href="index.html">Home</a>
+  <a href="about.html">About</a>
+  <a href="donations.html">Donations</a>
+  <a href="available-temples.html">Available Temples</a>
+  <a href="notifications.html">News & Events</a>
+  <a href="goshala.html">Goshala</a>
+  <a href="gallery.html">Gallery</a>
+  <a href="media.html">Media Room</a>
+  <a href="library.html">Library</a>
+  <a href="contact.html">Contact</a>
+</nav>
   </div>
 
   <div class="lang-switch simple">
