--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
         <li><a href="gallery.html">Gallery</a></li>
         <li><a href="donations.html">Donations</a></li>
         <li><a href="contact.html">Contact</a></li>
+        <li><a href="places.html">Nearby Places</a></li>
       </ul>
     </div>
 
