--- a/available-temples.html
+++ b/available-temples.html
@@ -43,7 +43,7 @@
 <!-- TEMPLES GRID -->
 <section class="temples-list">
 
-  
+   <a href="temple-main.html" class="temple-card">  
     <h3 data-key="temple_main_title"></h3>
     <p data-key="temple_main_desc"></p>
   </a>
