--- a/available-temples.html
+++ b/available-temples.html
@@ -43,52 +43,53 @@
 <!-- TEMPLES GRID -->
 <section class="temples-list">
 
-   <a href="temple-main.html" class="temple-card">  
+  <div class="temple-card">
     <h3 data-key="temple_main_title"></h3>
     <p data-key="temple_main_desc"></p>
-  </a>
+  </div>
 
-  <a href="temple-anjaneya.html" class="temple-card">
+  <div class="temple-card">
     <h3 data-key="temple_anjaneya_title"></h3>
     <p data-key="temple_anjaneya_desc"></p>
-  </a>
+  </div>
 
-  <a href="temple-shiva.html" class="temple-card">
+  <div class="temple-card">
     <h3 data-key="temple_shiva_title"></h3>
     <p data-key="temple_shiva_desc"></p>
-  </a>
+  </div>
 
-  <a href="temple-goshala.html" class="temple-card">
+  <div class="temple-card">
     <h3 data-key="temple_goshala_title"></h3>
     <p data-key="temple_goshala_desc"></p>
-  </a>
+  </div>
 
-  <a href="temple-gundam.html" class="temple-card">
+  <div class="temple-card">
     <h3 data-key="temple_gundam_title"></h3>
     <p data-key="temple_gundam_desc"></p>
-  </a>
+  </div>
 
-  <a href="temple-navagraha.html" class="temple-card">
+  <div class="temple-card">
     <h3 data-key="temple_navagraha_title"></h3>
     <p data-key="temple_navagraha_desc"></p>
-  </a>
+  </div>
 
-  <a href="temple-dharmashala.html" class="temple-card">
+  <div class="temple-card">
     <h3 data-key="temple_dharmashala_title"></h3>
     <p data-key="temple_dharmashala_desc"></p>
-  </a>
+  </div>
 
-  <a href="temple-shivaji.html" class="temple-card">
+  <div class="temple-card">
     <h3 data-key="temple_shivaji_title"></h3>
     <p data-key="temple_shivaji_desc"></p>
-  </a>
+  </div>
 
-  <a href="temple-kalyanamandapam.html" class="temple-card">
+  <div class="temple-card">
     <h3 data-key="temple_kalyanamandapam_title"></h3>
     <p data-key="temple_kalyanamandapam_desc"></p>
-  </a>
+  </div>
 
 </section>
+
 
 
 </body>
