--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <h4>Contact</h4>
       <p>
         Devalthirumalpur Village,<br>
-        Pedhakothapally Mandal,<br>
+        Peddakothapally Mandal,<br>
         Nagarkurnool District,<br>
         Telangana – India
       </p>
