--- a/media.html
+++ b/media.html
@@ -7,6 +7,26 @@
 </head>
 <body>
 
+<header>
+    <nav class="ttd-nav">
+  <a href="index.html">Home</a>
+  <a href="about.html">About</a>
+  <a href="donations.html">Donations</a>
+  <a href="available-temples.html">Available Temples</a>
+  <a href="notifications.html">News & Events</a>
+  <a href="goshala.html">Goshala</a>
+  <a href="gallery.html">Gallery</a>
+  <a href="media.html">Media Room</a>
+  <a href="library.html">Library</a>
+  <a href="contact.html">Contact</a>
+</nav>
+
+
+  <div class="lang-switch simple">
+    <button onclick="setLang('te')" id="btn-te">తెలుగు</button>
+    <button onclick="setLang('en')" id="btn-en">EN</button>
+  </div>
+</header>
 <h2>మీడియా రూమ్</h2>
 <p>లైవ్ దర్శనం, వీడియోలు మరియు సోషల్ మీడియా అప్‌డేట్స్.</p>
 
