--- a/available-temples.html
+++ b/available-temples.html
@@ -10,10 +10,30 @@
 
 <body>
 
+<!-- ===== TOP TTD STYLE BANNER ===== -->
+<div class="top-banner">
+  <div class="banner-inner">
+
+    <!-- Left Logo -->
+    <div class="banner-logo left">
+      <img src="assets/images/logo-left.png" alt="Temple Logo">
+    </div>
+
+    <!-- Center Title -->
+    <div class="banner-title">
+      <h1 data-key="site_title"></h1>
+    </div>
+
+    <!-- Right Logo -->
+    <div class="banner-logo right">
+      <img src="assets/images/logo-right.png" alt="Deity Image">
+    </div>
+
+  </div>
+</div>
+
 <header>
   <div>
-    <h2 data-key="site_title"></h2>
-
     <nav class="ttd-nav">
   <a href="index.html">Home</a>
   <a href="about.html">About</a>
