--- a/gallery.html
+++ b/gallery.html
@@ -19,6 +19,28 @@
 </div>
 
 
+<!-- ===== TOP TTD STYLE BANNER ===== -->
+<div class="top-banner">
+  <div class="banner-inner">
+
+    <!-- Left Logo -->
+    <div class="banner-logo left">
+      <img src="assets/images/logo-left.png" alt="Temple Logo">
+    </div>
+
+    <!-- Center Title -->
+    <div class="banner-title">
+      <h1 data-key="site_title"></h1>
+    </div>
+
+    <!-- Right Logo -->
+    <div class="banner-logo right">
+      <img src="assets/images/logo-right.png" alt="Deity Image">
+    </div>
+
+  </div>
+</div>
+  
 <header>
   <h2>Sri Sri Sri Bhunela Sametha Sri Venkateshwara Swamy Devasthanam</h2>
   <nav class="ttd-nav">
