--- a/goshala.html
+++ b/goshala.html
@@ -8,6 +8,28 @@
 </head>
 <body>
 
+<!-- ===== TOP TTD STYLE BANNER ===== -->
+<div class="top-banner">
+  <div class="banner-inner">
+
+    <!-- Left Logo -->
+    <div class="banner-logo left">
+      <img src="assets/images/logo-left.png" alt="Temple Logo">
+    </div>
+
+    <!-- Center Title -->
+    <div class="banner-title">
+      <h1 data-key="site_title"></h1>
+    </div>
+
+    <!-- Right Logo -->
+    <div class="banner-logo right">
+      <img src="assets/images/logo-right.png" alt="Deity Image">
+    </div>
+
+  </div>
+</div>
+  
 <header><a href="index.html">← Home</a></header>
 
 <h1 data-key="goshala_title"></h1>
