--- a/places.html
+++ b/places.html
@@ -7,6 +7,28 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
+<!-- ===== TOP TTD STYLE BANNER ===== -->
+<div class="top-banner">
+  <div class="banner-inner">
+
+    <!-- Left Logo -->
+    <div class="banner-logo left">
+      <img src="assets/images/logo-left.png" alt="Temple Logo">
+    </div>
+
+    <!-- Center Title -->
+    <div class="banner-title">
+      <h1 data-key="site_title"></h1>
+    </div>
+
+    <!-- Right Logo -->
+    <div class="banner-logo right">
+      <img src="assets/images/logo-right.png" alt="Deity Image">
+    </div>
+
+  </div>
+</div>
+  
 <header>
   <nav class="ttd-nav">
   <a href="index.html">Home</a>
