--- a/goshala.html
+++ b/goshala.html
@@ -30,7 +30,21 @@
   </div>
 </div>
   
-<header><a href="index.html">← Home</a></header>
+<header>
+ <nav class="ttd-nav">
+  <a href="index.html">Home</a>
+  <a href="about.html">About</a>
+  <a href="donations.html">Donations</a>
+  <a href="available-temples.html">Available Temples</a>
+  <a href="notifications.html">News & Events</a>
+  <a href="goshala.html">Goshala</a>
+  <a href="gallery.html">Gallery</a>
+  <a href="media.html">Media Room</a>
+  <a href="library.html">Library</a>
+  <a href="contact.html">Contact</a>
+</nav>
+
+</header>
 
 <h1 data-key="goshala_title"></h1>
 <p data-key="goshala_desc"></p>
