--- a/notifications.html
+++ b/notifications.html
@@ -59,5 +59,7 @@
 <h1>Notifications & Updates</h1>
 <p>Festival schedules and official announcements.</p>
 
+<script src="assets/js/lang.js"></script>
+
 </body>
 </html>
