--- a/goshala.html
+++ b/goshala.html
@@ -49,5 +49,7 @@
 <h1 data-key="goshala_title"></h1>
 <p data-key="goshala_desc"></p>
 
+<script src="assets/js/lang.js"></script>
+
 </body>
 </html>
