--- a/gallery.html
+++ b/gallery.html
@@ -67,3 +67,7 @@
     <img src="assets/images/gallery/img1.jpg" alt="Temple Gal
   <section class="gallery-section">
 
+<script src="assets/js/lang.js"></script>
+
+</body>
+</html>
