--- a/media.html
+++ b/media.html
@@ -89,5 +89,49 @@
 
 <script src="assets/js/lang.js"></script>
 
+<footer class="site-footer">
+  <div class="footer-container">
+
+    <div class="footer-box">
+      <h3 data-key="site_title"></h3>
+      <p>
+        Sri Sri Sri Bhunela Sametha<br>
+        Sri Venkateshwara Swamy Devasthanam
+      </p>
+    </div>
+
+    <div class="footer-box">
+      <h4>Quick Links</h4>
+      <ul>
+        <li><a href="about.html">About Temple</a></li>
+        <li><a href="sevas.html">Sevas</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="donations.html">Donations</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="places.html">Nearby Places</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-box">
+      <h4>Contact</h4>
+      <p>
+        Devalthirumalpur Village,<br>
+        Peddakothapally Mandal,<br>
+        Nagarkurnool District,<br>
+        Telangana – India
+      </p>
+    </div>
+
+  </div>
+
+  <div class="footer-bottom">
+    <p>
+      © Sri Sri Sri Bhunela Sametha Sri Venkateshwara Swamy Devasthanam<br>
+      🌐 <a href="https://www.devalthirumalapurdevasthanam.com">
+      www.devalthirumalapurdevasthanam.com</a>
+    </p>
+  </div>
+</footer>
+  
 </body>
 </html>
