--- a/notifications.html
+++ b/notifications.html
@@ -59,6 +59,97 @@
 <h1>Notifications & Updates</h1>
 <p>Festival schedules and official announcements.</p>
 
+<!-- PAGE BANNER -->
+<section class="page-banner">
+  <h1>🪔 ఆలయ ప్రకటనలు & ఉత్సవ సమాచారం</h1>
+  <p>శ్రీ శ్రీ శ్రీ భూనేల సమేత శ్రీ వెంకటేశ్వర స్వామి దేవస్థానం</p>
+</section>
+
+<!-- NOTIFICATION CONTENT -->
+<section class="notifications-section">
+
+  <div class="notification-card">
+
+    <h2 class="event-title">
+      శ్రీ వెంకటేశ్వర స్వామి వారి బ్రహ్మోత్సవ మహోత్సవాలు
+    </h2>
+
+    <p class="event-dates">
+      📅 తేదీలు: <strong>27-01-2026 (మంగళవారం)</strong> నుండి  
+      <strong>04-02-2026 (బుధవారం)</strong> వరకు
+    </p>
+
+    <div class="event-note">
+      భక్తులందరూ ఈ పవిత్ర ఉత్సవాలలో పాల్గొని స్వామివారి కృపకు పాత్రులు కావలసిందిగా ఆలయ కమిటీ కోరుచున్నది.
+    </div>
+
+    <!-- DAILY SCHEDULE -->
+    <table class="event-table">
+      <tr>
+        <th>తేదీ</th>
+        <th>వారం</th>
+        <th>ఉత్సవ వివరాలు</th>
+      </tr>
+
+      <tr>
+        <td>27-01-2026</td>
+        <td>మంగళవారం</td>
+        <td>అంకురార్పణం</td>
+      </tr>
+
+      <tr>
+        <td>28-01-2026</td>
+        <td>బుధవారం</td>
+        <td>గణపతి సేవ</td>
+      </tr>
+
+      <tr>
+        <td>29-01-2026</td>
+        <td>గురువారం</td>
+        <td>శేషవాహనం</td>
+      </tr>
+
+      <tr>
+        <td>30-01-2026</td>
+        <td>శుక్రవారం</td>
+        <td>హనుమంతవాహనం</td>
+      </tr>
+
+      <tr>
+        <td>31-01-2026</td>
+        <td>శనివారం</td>
+        <td>గరుడవాహనం</td>
+      </tr>
+
+      <tr>
+        <td>01-02-2026</td>
+        <td>ఆదివారం</td>
+        <td>కళ్యాణోత్సవం & ప్రభావన రాత్రి</td>
+      </tr>
+
+      <tr>
+        <td>02-02-2026</td>
+        <td>సోమవారం</td>
+        <td>రథోత్సవం (మధ్యాహ్నం)</td>
+      </tr>
+
+      <tr>
+        <td>03-02-2026</td>
+        <td>మంగళవారం</td>
+        <td>అశ్వవాహనం</td>
+      </tr>
+
+      <tr>
+        <td>04-02-2026</td>
+        <td>బుధవారం</td>
+        <td>చక్రస్నానం, స్నపనాభిషేకం, ధ్వజావరోహణ</td>
+      </tr>
+
+    </table>
+
+  </div>
+
+</section>
 <footer class="site-footer">
   <div class="footer-container">
 
