--- a/index.html
+++ b/index.html
@@ -87,12 +87,22 @@
 </div>
 
 
-    <div class="card service-card">
-      <h3>💰 E-Hundi</h3>
-      <p>Offer your contribution digitally.</p>
-    </div>
+   <!-- UPCOMING EVENT -->
+<div class="card service-card upcoming-event">
 
-    <div class>
+  <h3 data-key="upcoming_event_title"></h3>
+
+  <p class="event-name" data-key="upcoming_event_name"></p>
+
+  <p class="event-date">
+    🗓️ <span data-key="upcoming_event_date"></span>
+  </p>
+
+  <a href="notifications.html" class="btn-primary small-btn" data-key="view_event_details">
+  </a>
+
+</div>
+
 <section>
   <h2 data-key="about_title"></h2>
   <p data-key="about_short"></p>
